tests/ui/fail/skip/invalid_specifier.stderr
error: encountered unknown or unsupported #[skip(..)] specifier
 --> tests/ui/fail/skip/invalid_specifier.rs:5:12
  |
5 |     #[skip(invalid_specifier)]
  |            ^^^^^^^^^^^^^^^^^
